fixed text block overflowerror

--- a/styles/studio-services.css
+++ b/styles/studio-services.css
@@ -144,7 +144,7 @@
 	box-sizing: border-box;
 	border-radius: 30px;
 	margin: 103px 0 0 0;
-	background: url(../images/service-studio/backgrpund-service-card.png) no-repeat center 0/ 100%;
+	background: url(../images/service-studio/backgrpund-service-card.png) no-repeat center / cover;
 }
 
 .service-card__image {
